// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Placeloader square of 100x100 pixels 1`] = `
<div
  className="dbxGLb"
  height="10rem"
  width="10rem"
/>
`;

exports[`Storyshots RecentTours with no search (loading) 1`] = `
<div>
  <h1
    className="kEpNFr"
  >
    Recently added tours
  </h1>
  <div
    className="BhtJE"
  >
    <div
      className="iQBIEi"
      height="7rem"
      width="7rem"
    />
    <div
      className="kdupfl"
    >
      <div
        className="jnkzqA"
        height="1rem"
        width="30rem"
      />
      <div
        className="ecFeOf"
        height="1rem"
        width="20rem"
      />
      <div
        className="lcwQZc"
        height="1rem"
        width="30rem"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RecentTours with no search 1`] = `
<div>
  <h1
    className="kEpNFr"
  >
    Recently added tours
  </h1>
  <div
    className="BhtJE"
  >
    <div
      className="iQBIEi"
      height="7rem"
      width="7rem"
    />
    <div
      className="kdupfl"
    >
      <div
        className="jnkzqA"
        height="1rem"
        width="30rem"
      />
      <div
        className="ecFeOf"
        height="1rem"
        width="20rem"
      />
      <div
        className="lcwQZc"
        height="1rem"
        width="30rem"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RecentTours with specific search (loading) 1`] = `
<div>
  <h1
    className="kEpNFr"
  >
    Search results
  </h1>
  <div
    className="BhtJE"
  >
    <div
      className="iQBIEi"
      height="7rem"
      width="7rem"
    />
    <div
      className="kdupfl"
    >
      <div
        className="jnkzqA"
        height="1rem"
        width="30rem"
      />
      <div
        className="ecFeOf"
        height="1rem"
        width="20rem"
      />
      <div
        className="lcwQZc"
        height="1rem"
        width="30rem"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots RecentTours with specific search 1`] = `
<div>
  <h1
    className="kEpNFr"
  >
    Search results
  </h1>
  <div
    className="BhtJE"
  >
    <div
      className="iQBIEi"
      height="7rem"
      width="7rem"
    />
    <div
      className="kdupfl"
    >
      <div
        className="jnkzqA"
        height="1rem"
        width="30rem"
      />
      <div
        className="ecFeOf"
        height="1rem"
        width="20rem"
      />
      <div
        className="lcwQZc"
        height="1rem"
        width="30rem"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots TourBadge loading 1`] = `
<div
  className="BhtJE"
>
  <div
    className="iQBIEi"
    height="7rem"
    width="7rem"
  />
  <div
    className="kdupfl"
  >
    <div
      className="jnkzqA"
      height="1rem"
      width="30rem"
    />
    <div
      className="ecFeOf"
      height="1rem"
      width="20rem"
    />
    <div
      className="lcwQZc"
      height="1rem"
      width="30rem"
    />
  </div>
</div>
`;

exports[`Storyshots TourBadge on tour page 1`] = `
<div
  className="BhtJE"
>
  <img
    className="jZleRd"
    src="https://github.com/partyparrot.png"
  />
  <div
    className="kdupfl"
  >
    <h1
      className="a"
    >
      <span
        className="jpDMXu"
      >
        Tour of 
      </span>
      partyparrot/codetours-starter-kit
      <span
        className="jpDMXu"
      >
        , led by 
        <a
          href="https://github.com/partyparrot"
        >
          partyparrot
        </a>
      </span>
    </h1>
    <p
      className="gyxudC"
    >
      Start here when you're making a code tour!
    </p>
  </div>
</div>
`;

exports[`Storyshots TourBadge on tours list 1`] = `
<div
  className="BhtJE"
>
  <img
    className="duDXCA"
    src="https://github.com/partyparrot.png"
  />
  <div
    className="kdupfl"
  >
    <h4
      className="a"
    >
      <a
        onClick={[Function]}
        style={Object {}}
      >
        partyparrot/codetours-starter-kit
        <span
          className="jpDMXu"
        >
           by 
          partyparrot
        </span>
      </a>
    </h4>
    <p
      className="kruepF"
    >
      Start here when you're making a code tour!
    </p>
    <p
      className="kruepF"
    >
      <span
        className="jpDMXu"
      >
        Contribute at 
      </span>
      <a
        href="https://github.com/partyparrot/codetours-starter-kit"
      >
        partyparrot/codetours-starter-kit
      </a>
    </p>
  </div>
</div>
`;
